package strategy;

public interface Compartor<T> {
    int compare(T t1,T t2);
}
